// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 34182,
}
`;

exports[`TWAMM #executeTWAMMOrders gas 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 392304,
}
`;

exports[`TWAMM #modifyLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 39157,
}
`;

exports[`TWAMM #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 123149,
}
`;

exports[`TWAMM single pool sell tests gas 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 103179,
}
`;

exports[`TWAMM single pool sell tests gas zeroForOne=false 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 109870,
}
`;
